Izmena DBBrokera i dodavanje zavisnosti u pom.xml.