@@ -35,7 +35,36 @@
            <artifactId>mysql-connector-j</artifactId>
            <version>8.2.0</version>
        </dependency>
+       
+
+                        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+         <dependency>
+             <groupId>org.mockito</groupId>
+             <artifactId>mockito-core</artifactId>
+             <version>5.10.0</version>
+             <scope>test</scope>
+         </dependency>
+
+
+
 
 
     </dependencies>
+    
+    <build>
+    <plugins>
+        <!-- Ostali plugini -->
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+                <argLine>
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                </argLine>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
